--- a/assets/css/mains.css
+++ b/assets/css/mains.css
@@ -2,11 +2,9 @@
   #main.css
 \*-------------------------------------*/
 
-
-
-
-
-
+/**
+ * copyright 2021 @codewithsadee 
+ */
 
 /*-------------------------------------*\
   #VARIABLES
@@ -18,33 +16,28 @@
 
 @import url(./variable.css);
 
-
-
-
-
 /*-------------------------------------*\
-  #RESET
-\*-------------------------------------*/
+   #RESET
+ \*-------------------------------------*/
 
 /**
- * import reset.css file 
- */
+  * import reset.css file 
+  */
 
 @import url(./reset.css);
 
-
-
-
-
 /*-------------------------------------*\
-  #REPEAT
-\*-------------------------------------*/
+   #REPEAT
+ \*-------------------------------------*/
 
 /**
- * reused style
- */
+  * reused style
+  */
 
-header, nav { background: var(--rich-black-fogra-29); }
+header,
+nav {
+  background: var(--rich-black-fogra-29);
+}
 
 .navbar,
 .banner,
@@ -54,222 +47,107 @@ header, nav { background: var(--rich-black-fogra-29); }
   padding: 0 var(--px);
 }
 
-.section-heading {
-  font-size: var(--section-heading);
-  font-weight: var(--fw-5);
-  margin-bottom: 40px;
+:root {
+  --main-color: #0769aa;
 }
 
-
-
-
+.section-header {
+  margin-bottom: 60px;
+  padding-left: 20px;
+  font-size: 30px;
+  font-weight: var(--fw-5);
+  border-left: 4px solid var(--main-color);
+  display: flex;
+  align-items: center;
+}
 
 /*-------------------------------------*\
-  #MAIN
-\*-------------------------------------*/
+   #MAIN
+ \*-------------------------------------*/
 
 /**
- * main container style 
- */
+  * main container style 
+  */
 
 .container {
   max-width: 1440px;
   margin: auto;
 }
 
-
-
-
-
 /*-------------------------------------*\
-  #NAVBAR
-\*-------------------------------------*/
+   #NAVBAR
+ \*-------------------------------------*/
 
 /**
- * navbar style 
- */
+  * navbar style 
+  */
 
 .navbar {
   height: 100px;
-  display:         flex;
+  display: flex;
   justify-content: space-between;
-  align-items:     center;
+  align-items: center;
 }
 
+/**
+  * small screen menu button style 
+  */
 
-
-
-
+.navbar-menu-btn {
+  display: none;
+}
 
 /**
- * navbar navigation style 
- */
-
- nav { margin-right: 200px; }
-
- .navbar-nav { display: flex; }
- 
- .navbar-nav li:not(:last-child) { margin-right: 60px; }
- 
- .navbar-link {
-   font-size: var(--fs-sm);
-   font-weight: var(--fw-5);
- }
- 
- .navbar-link:hover { color: var(--light-azure); }
- 
- /**
-  * dropdown menu style 
-  */
- 
- .navbar-dropdown {
-   position: relative;
- }
- 
-
- /**
-  * custom drop down 
+  * navbar navigation style 
   */
 
- /**
- * navbar navigation style 
- */
+nav {
+  margin-right: 200px;
+}
 
-nav { margin-right: 200px; }
+.navbar-nav {
+  display: flex;
+}
 
-.navbar-nav { display: flex; }
-
-.navbar-nav li:not(:last-child) { margin-right: 60px; }
+.navbar-nav li:not(:last-child) {
+  margin-right: 60px;
+}
 
 .navbar-link {
   font-size: var(--fs-sm);
   font-weight: var(--fw-5);
 }
 
-.navbar-link:hover { color: var(--light-azure); }
+.navbar-link:hover {
+  color: var(--light-azure);
+}
 
 /**
- * dropdown menu style 
- */
+  * live indicator style 
+  */
 
-.navbar-dropdown {
+.indicator {
   position: relative;
 }
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: #171627;
-  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.212);
-  border-radius: 10px; /* Adjust the border-radius to control the roundness */
-}
-
-.navbar-dropdown:hover .dropdown-content {
-  display: block;
-}
-
-.dropdown-content li {
-  margin: 0;
-  padding: 10px;
-  border-radius: 10px; /* Adjust the border-radius to control the roundness */
-}
-
-/* Added styles for the click effect */
-.navbar-link.clicked {
-  
-  transition: color 0.3s ease;
-}
-
-/**
- * live indicator style 
- */
-
-.indicator { position: relative; }
-
 .indicator::after {
-  content: '';
+  content: "";
   background: var(--live-indicator);
   position: absolute;
-  top:   calc(50% - 1px);
+  top: calc(50% - 1px);
   right: -15px;
-  width:  4px;
+  width: 4px;
   height: 4px;
   box-shadow: 0 0 0 2px var(--live-indicator-shadow);
   border-radius: 5px;
 }
 
- 
- /**
-  * live indicator style 
+/**
+  * navbar form & button style 
   */
- 
- .indicator { position: relative; }
- 
- .indicator::after {
-   content: '';
-   background: var(--live-indicator);
-   position: absolute;
-   top:   calc(50% - 1px);
-   right: -15px;
-   width:  4px;
-   height: 4px;
-   box-shadow: 0 0 0 2px var(--live-indicator-shadow);
-   border-radius: 5px;
- }
- 
-
-
-
-
-/**
- * small screen menu button style 
- */
-
-.navbar-menu-btn { display: none; }
-
-/**
- * navbar navigation style 
- */
-
-nav { margin-right: 200px; }
-
-.navbar-nav { display: flex; }
-
-.navbar-nav li:not(:last-child) { margin-right: 60px; }
-
-.navbar-link {
-  font-size: var(--fs-sm);
-  font-weight: var(--fw-5);
-}
-
-.navbar-link:hover { color: var(--light-azure); }
-
-/**
- * live indicator style 
- */
-
-.indicator { position: relative; }
-
-.indicator::after {
-  content: '';
-  background: var(--live-indicator);
-  position: absolute;
-  top:   calc(50% - 1px);
-  right: -15px;
-  width:  4px;
-  height: 4px;
-  box-shadow: 0 0 0 2px var(--live-indicator-shadow);
-  border-radius: 5px;
-}
-
-/**
- * navbar form & button style 
- */
 
 .navbar-actions {
-  display:     flex;
+  display: flex;
   align-items: center;
 }
 
@@ -291,7 +169,7 @@ nav { margin-right: 200px; }
 .navbar-form-btn {
   background: var(--oxford-blue);
   position: absolute;
-  top:   calc(50% - 10px);
+  top: calc(50% - 10px);
   right: 10px;
 }
 
@@ -303,18 +181,22 @@ nav { margin-right: 200px; }
 }
 
 .navbar-form-btn:hover ion-icon,
-.navbar-form-search::placeholder { color: var(--off-white); }
+.navbar-form-search::placeholder {
+  color: var(--off-white);
+}
 
 /**
- * navbar-form close button & navbar search button
- * for small device 
- */
+  * navbar-form close button & navbar search button
+  * for small device 
+  */
 
 .navbar-form-close,
-.navbar-search-btn { display: none; }
+.navbar-search-btn {
+  display: none;
+}
 
 .navbar-signin {
-  display:     flex;
+  display: flex;
   align-items: center;
   font-size: var(--fs-sm);
 }
@@ -326,21 +208,21 @@ nav { margin-right: 200px; }
   --ionicon-stroke-width: 30px;
 }
 
-.navbar-signin:hover span { color: var(--light-azure); }
-
-
-
-
+.navbar-signin:hover span {
+  color: var(--light-azure);
+}
 
 /*-------------------------------------*\
-  #BANNER
-\*-------------------------------------*/
+   #BANNER
+ \*-------------------------------------*/
 
 /**
- * banner card style 
- */
+  * banner card style 
+  */
 
-.banner { margin-bottom: 60px; }
+.banner {
+  margin-bottom: 60px;
+}
 
 .banner-card {
   position: relative;
@@ -350,25 +232,29 @@ nav { margin-right: 200px; }
   cursor: pointer;
 }
 
-.banner-img { object-position: top; }
+.banner-img {
+  object-position: top;
+}
 
-.banner-card:hover .banner-img { transform: scale(1.1); }
+.banner-card:hover .banner-img {
+  transform: scale(1.1);
+}
 
 .banner-card .card-content {
   position: absolute;
-  right:  80px;
+  right: 80px;
   bottom: 60px;
-  left:   80px;
+  left: 80px;
 }
 
 .banner-card .card-info {
-  display:     flex;
+  display: flex;
   align-items: center;
   margin-bottom: 20px;
 }
 
 .banner-card .card-info div {
-  display:     flex;
+  display: flex;
   align-items: center;
   margin-right: 20px;
 }
@@ -379,7 +265,9 @@ nav { margin-right: 200px; }
   margin-right: 5px;
 }
 
-.banner-card .card-info span { font-weight: var(--fw-6); }
+.banner-card .card-info span {
+  font-weight: var(--fw-6);
+}
 
 .banner-card .card-info .quality {
   background: var(--azure);
@@ -394,24 +282,22 @@ nav { margin-right: 200px; }
   text-shadow: 2px 0 2px #0007;
 }
 
-
-
-
-
 /*-------------------------------------*\
-  #MOIVES SECTION
-\*-------------------------------------*/
+   #MOIVES SECTION
+ \*-------------------------------------*/
 
-.movies { margin-bottom: 60px; }
+.movies {
+  margin-bottom: 60px;
+}
 
 /**
- * filter bar style
- */
+  * filter bar style
+  */
 
 .filter-bar {
-  display:         flex;
+  display: flex;
   justify-content: space-between;
-  align-items:     center;
+  align-items: center;
   background: var(--oxford-blue);
   padding: 20px 30px;
   border-radius: 20px;
@@ -425,7 +311,9 @@ nav { margin-right: 200px; }
   cursor: pointer;
 }
 
-.filter-bar option { background: var(--oxford-blue); }
+.filter-bar option {
+  background: var(--oxford-blue);
+}
 
 .filter-radios {
   position: relative;
@@ -434,7 +322,9 @@ nav { margin-right: 200px; }
   border-radius: 15px;
 }
 
-.filter-radios input { display: none; }
+.filter-radios input {
+  display: none;
+}
 
 .filter-radios label {
   position: relative;
@@ -446,20 +336,22 @@ nav { margin-right: 200px; }
 }
 
 .filter-radios input:checked + label,
-.filter-radios label:hover { color: var(--light-azure); }
+.filter-radios label:hover {
+  color: var(--light-azure);
+}
 
 input ~ .checked-radio-bg {
   /**
-   * variable for changing position and size
-   * besed on radio checked 
-   */
+    * variable for changing position and size
+    * besed on radio checked 
+    */
   --width: 85px;
-  --left:   5px;
+  --left: 5px;
 
   background: var(--oxford-blue);
   position: absolute;
-  top:    5px;
-  left:   var(--left);
+  top: 5px;
+  left: var(--left);
   bottom: 5px;
   width: var(--width);
   border-radius: 10px;
@@ -467,18 +359,17 @@ input ~ .checked-radio-bg {
 
 #popular:checked ~ .checked-radio-bg {
   --width: 73px;
-  --left:  90px;
+  --left: 90px;
 }
 
 #newest:checked ~ .checked-radio-bg {
-  --width:  81px;
-  --left:  163px;
+  --width: 81px;
+  --left: 163px;
 }
 
-
 /**
- * movies grid 
- */
+  * movies grid 
+  */
 
 .movies-grid {
   display: grid;
@@ -489,8 +380,8 @@ input ~ .checked-radio-bg {
 
 .movie-card {
   /**
-   * variable for scaling overlay element on card hover 
-   */
+    * variable for scaling overlay element on card hover 
+    */
   --scale: 0.8;
 
   cursor: pointer;
@@ -504,7 +395,9 @@ input ~ .checked-radio-bg {
   overflow: hidden;
 }
 
-.movie-card:hover .card-img { transform: scale(1.1); }
+.movie-card:hover .card-img {
+  transform: scale(1.1);
+}
 
 .movie-card .card-overlay {
   position: absolute;
@@ -513,7 +406,9 @@ input ~ .checked-radio-bg {
   backdrop-filter: blur(5px);
 }
 
-.movie-card:hover .card-overlay { opacity: 1; }
+.movie-card:hover .card-overlay {
+  opacity: 1;
+}
 
 .movie-card .bookmark,
 .movie-card .rating {
@@ -530,10 +425,12 @@ input ~ .checked-radio-bg {
   left: 15px;
 }
 
-.movie-card .bookmark:hover { color: var(--yellow); }
+.movie-card .bookmark:hover {
+  color: var(--yellow);
+}
 
 .movie-card .rating {
-  display:     flex;
+  display: flex;
   align-items: center;
   right: 15px;
   background: var(--oxford-blue-50);
@@ -554,7 +451,7 @@ input ~ .checked-radio-bg {
 
 .movie-card .play {
   position: absolute;
-  top:  50%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(var(--scale));
 }
@@ -564,7 +461,9 @@ input ~ .checked-radio-bg {
   --ionicon-stroke-width: 20px;
 }
 
-.movie-card:hover :is(.bookmark, .rating, .play) { --scale: 1; }
+.movie-card:hover :is(.bookmark, .rating, .play) {
+  --scale: 1;
+}
 
 .movie-card .card-title {
   font-size: var(--fs-md);
@@ -572,7 +471,9 @@ input ~ .checked-radio-bg {
   margin-bottom: 5px;
 }
 
-.movie-card:hover .card-title { color: var(--light-azure); }
+.movie-card:hover .card-title {
+  color: var(--light-azure);
+}
 
 .movie-card .card-info {
   display: flex;
@@ -580,38 +481,18 @@ input ~ .checked-radio-bg {
   font-weight: var(--fw-5);
 }
 
-.movie-card .genre { margin-right: 8px; }
-
+.movie-card .genre {
+  margin-right: 8px;
+}
 
 /**
- * load more button 
- */
+  * load more button 
+  */
 
 .load-more {
   background: var(--oxford-blue);
   display: block;
-  padding: 20px 30px;
-  margin: auto;
-  font-size: var(--fs-sm);
-  font-weight: var(--fw-5);
-  border-radius: 20px;
-  color: var(--white);
-}
-
-.load-more:hover { background: var(--light-azure); }
-
-
-
-
-
-
-
-
-
-.go-to-home {
-  background: var(--light-azure);
-  display: block;
-  padding: 20px 20px;
+  padding: 20px 50px;
   margin: auto;
   font-size: var(--fs-sm);
   font-weight: var(--fw-5);
@@ -619,22 +500,17 @@ input ~ .checked-radio-bg {
   color: var(--white);
 }
 
-.go-to-home:hover { background: var(--oxford-blue); }
-
-
-
-
-
-
-
-
-
+.load-more:hover {
+  background: var(--light-azure);
+}
 
 /*-------------------------------------*\
-  #CATEGORY SECTION
-\*-------------------------------------*/
+   #CATEGORY SECTION
+ \*-------------------------------------*/
 
-.category { margin-bottom: 60px; }
+.category {
+  margin-bottom: 60px;
+}
 
 .category-grid {
   display: grid;
@@ -645,19 +521,21 @@ input ~ .checked-radio-bg {
 .category-card {
   position: relative;
   height: 150px;
-  border-radius: 30px;
+  border-radius: 20px;
   overflow: hidden;
   cursor: pointer;
 }
 
 .category-card::after {
-  content: '';
+  content: "";
   position: absolute;
   inset: 0;
   background: linear-gradient(180deg, transparent 20%, #000a);
 }
 
-.category-card:hover .card-img { transform: scale(1.1); }
+.category-card:hover .card-img {
+  transform: scale(1.1);
+}
 
 .category-card .name,
 .category-card .total {
@@ -680,18 +558,17 @@ input ~ .checked-radio-bg {
   border-radius: 8px;
 }
 
-.category-card:hover .name { color: var(--light-azure); }
-
-
-
-
-
+.category-card:hover .name {
+  color: var(--light-azure);
+}
 
 /*-------------------------------------*\
-  #LIVE SECTION
-\*-------------------------------------*/
+   #LIVE SECTION
+ \*-------------------------------------*/
 
-.live { margin-bottom: 60px; }
+.live {
+  margin-bottom: 60px;
+}
 
 .live-grid {
   display: grid;
@@ -699,7 +576,9 @@ input ~ .checked-radio-bg {
   gap: 30px;
 }
 
-.live-card { cursor: pointer; }
+.live-card {
+  cursor: pointer;
+}
 
 .live-card .card-head {
   position: relative;
@@ -710,13 +589,15 @@ input ~ .checked-radio-bg {
 }
 
 .live-card .card-head::after {
-  content: '';
+  content: "";
   position: absolute;
   inset: 0;
   background: linear-gradient(180deg, transparent 20%, #000a);
 }
 
-.live-card:hover .card-img { transform: scale(1.1); }
+.live-card:hover .card-img {
+  transform: scale(1.1);
+}
 
 .live-card .live-badge,
 .live-card .total-viewers {
@@ -743,7 +624,7 @@ input ~ .checked-radio-bg {
 
 .live-card .play {
   position: absolute;
-  top:  50%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.8);
   opacity: 0;
@@ -757,13 +638,13 @@ input ~ .checked-radio-bg {
 
 .live-card:hover .play {
   opacity: 1;
-  transform: translate(-50%, -50%) scale(1); 
+  transform: translate(-50%, -50%) scale(1);
 }
 
 .live-card .card-body {
-  display:         flex;
+  display: flex;
   justify-content: flex-start;
-  align-items:     flex-start;
+  align-items: flex-start;
 }
 
 .live-card .avatar {
@@ -777,15 +658,13 @@ input ~ .checked-radio-bg {
   font-weight: var(--fw-5);
 }
 
-.live-card:hover .card-title { color: var(--light-azure); }
-
-
-
-
+.live-card:hover .card-title {
+  color: var(--light-azure);
+}
 
 /*-------------------------------------*\
-  #FOOTER SECTION
-\*-------------------------------------*/
+   #FOOTER SECTION
+ \*-------------------------------------*/
 
 footer {
   background: var(--rich-black-fogra-30);
@@ -793,9 +672,9 @@ footer {
 }
 
 .footer-content {
-  display:         flex;
+  display: flex;
   justify-content: space-between;
-  align-items:     flex-start;
+  align-items: flex-start;
   border-bottom: 1px solid var(--oxford-blue-50);
   padding-bottom: 80px;
 }
@@ -816,7 +695,9 @@ footer {
   margin-bottom: 20px;
 }
 
-.social-link a { display: inline-block; }
+.social-link a {
+  display: inline-block;
+}
 
 .social-link ion-icon {
   font-size: 25px;
@@ -831,26 +712,42 @@ footer {
   align-items: flex-end;
 }
 
-.link-heading { margin-bottom: 20px; }
+.link-heading {
+  margin-bottom: 20px;
+}
 
-.link-item { font-size: var(--fs-sm); }
+.link-item {
+  font-size: var(--fs-sm);
+}
 
-ul .link-item:not(:last-child) { margin-bottom: 10px; }
+ul .link-item:not(:last-child) {
+  margin-bottom: 10px;
+}
 
-.link-item:hover a { color: var(--light-azure); }
+.link-item:hover a {
+  color: var(--light-azure);
+}
 
 .footer-copyright {
-  display:         flex;
+  display: flex;
   justify-content: space-between;
-  align-items:     center;
+  align-items: center;
   padding-top: 40px;
 }
 
 .footer-copyright p,
-.wrapper a { font-size: var(--fs-sm); }
+.wrapper a {
+  font-size: var(--fs-sm);
+}
 
-.wrapper a:hover { color: var(--light-azure); }
+.wrapper a:hover {
+  color: var(--light-azure);
+}
 
-.wrapper { display: flex; }
+.wrapper {
+  display: flex;
+}
 
-.wrapper a:not(:last-child) { margin-right: 30px; }
+.wrapper a:not(:last-child) {
+  margin-right: 30px;
+}
